fix historique in transfer